support for abstract transfer courses
